--- a/main.ipynb
+++ b/main.ipynb
@@ -53,6 +53,50 @@
     "if torch.cuda.is_available():\n",
     "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c419da89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "configuration set successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dataset paths \n",
+    "audio_dir = \"wmms_audio\"\n",
+    "labels_csv = 'wmms_labels.csv'\n",
+    "\n",
+    "#audio preocessing parameters \n",
+    "sample_rate = 22050\n",
+    "duration = 5\n",
+    "n_fft =2048\n",
+    "hop_length =512\n",
+    "n_freq_bins =128\n",
+    "\n",
+    "#training parameters \n",
+    "batch_size= 16 \n",
+    "epochs = 20 \n",
+    "learning_rate=0.001\n",
+    "validation_split =0.2\n",
+    "test_size = 0.2\n",
+    "\n",
+    "print(\"configuration set successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90088110",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
