--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "id": "db841921",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "print(numpy.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "2d73c42d",
    "metadata": {},
    "outputs": [
@@ -16,6 +35,9 @@
     }
    ],
    "source": [
+    "#importing all basic libraries needed\n",
+    "# make sure to pip install all needed libraries (e.g. pip install \"name\")\n",
+    "\"\"\"pip install os numpy pandas matplotlib scipy soundfile scikit-learn tqdm torch\"\"\"\n",
     "import os \n",
     "import numpy as np \n",
     "import pandas as pd\n",
@@ -56,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c419da89",
    "metadata": {},
    "outputs": [
@@ -92,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "90088110",
    "metadata": {},
    "outputs": [
@@ -239,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "373fa6ba",
    "metadata": {},
    "outputs": [
@@ -274,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7a40eec6",
    "metadata": {},
    "outputs": [
@@ -372,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "fa9a8c79",
    "metadata": {},
    "outputs": [
@@ -485,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "b46e9bb9",
    "metadata": {},
    "outputs": [
@@ -529,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c66a9153",
    "metadata": {},
    "outputs": [
@@ -618,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "23f12ff1",
    "metadata": {},
    "outputs": [
@@ -651,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "20e38ff6",
    "metadata": {},
    "outputs": [
@@ -692,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "20d3ef01",
    "metadata": {},
    "outputs": [
@@ -869,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
